force-app/main/default/objects/TaskRoleSummary__c/TaskRoleSummary__c.object-meta.xml
<CustomObject>
    <label>Task Role Summary</label>
    <nameField>
        <displayFormat>TRS-{00000}</displayFormat>
        <label>Task Role Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Role Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>