force-app/main/default/objects/TaskRoleSummary__c/fields/ActivityGroupId__c.field-meta.xml
<CustomField>
    <fullName>ActivityGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Group</label>
    <referenceTo>ActivityGroup__c</referenceTo>
    <relationshipName>RoleSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>