force-app/main/default/objects/TaskRoleSummary__c/fields/ActivityId__c.field-meta.xml
<CustomField>
    <fullName>ActivityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>Activity__c</referenceTo>
    <relationshipName>RoleSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>