force-app/main/default/objects/TaskRoleSummary__c/fields/CalculatedDuration__c.field-meta.xml
<CustomField>
    <fullName>CalculatedDuration__c</fullName>
    <label>Calculated Duration</label>
    <summarizedField>Task__c.CalculatedDuration__c</summarizedField>
    <summaryForeignKey>Task__c.RoleSummaryId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>