force-app/main/default/objects/TaskRoleSummary__c/fields/LevelAdjustment__c.field-meta.xml
<CustomField>
    <fullName>LevelAdjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Level Adjustment</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>