force-app/main/default/objects/TaskRoleSummary__c/fields/LevelAdjustments__c.field-meta.xml
<CustomField>
    <fullName>LevelAdjustments__c</fullName>
    <label>Level Adjustments</label>
    <summarizedField>Task__c.LevelAdjustment__c</summarizedField>
    <summaryForeignKey>Task__c.RoleSummaryId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>