force-app/main/default/objects/TaskRoleSummary__c/fields/ResourceRoleId__c.field-meta.xml
<CustomField>
    <fullName>ResourceRoleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Role</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Resource Role</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipName>LevelSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>