force-app/main/default/objects/TaskRoleSummary__c/fields/RolledUpAdjustments__c.field-meta.xml
<CustomField>
    <fullName>RolledUpAdjustments__c</fullName>
    <label>Rolled-Up Adjustments</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>