force-app/main/default/objects/TaskRoleSummary__c/fields/RolledUpCalculatedDuration__c.field-meta.xml
<CustomField>
    <fullName>RolledUpCalculatedDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rolled-Up Calculated Duration</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>