force-app/main/default/objects/TaskRoleSummary__c/fields/RolledUpEstimatedDuration__c.field-meta.xml
<CustomField>
    <fullName>RolledUpEstimatedDuration__c</fullName>
    <formula>RolledUpCalculatedDuration__c + RolledUpAdjustments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rolled-Up Estimated Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>