force-app/main/default/objects/TaskRoleSummary__c/fields/SummaryId__c.field-meta.xml
<CustomField>
    <fullName>SummaryId__c</fullName>
    <label>Summary</label>
    <referenceTo>TaskSummary__c</referenceTo>
    <relationshipName>RoleSummaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>