force-app/main/default/objects/TaskRoleSummary__c/fields/TaskRoleSummaryId__c.field-meta.xml
<CustomField>
    <fullName>TaskRoleSummaryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Role Summary</label>
    <referenceTo>TaskRoleSummary__c</referenceTo>
    <relationshipName>ExtendedTaskRoleSummaries</relationshipName>
    <type>Lookup</type>
</CustomField>