force-app/main/default/objects/TaskRoleSummary__c/fields/TotalCalculatedDuration__c.field-meta.xml
<CustomField>
    <fullName>TotalCalculatedDuration__c</fullName>
    <formula>RolledUpCalculatedDuration__c + CalculatedDuration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Calculated Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>